--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - '**'
+      - 'code/**'
 
 jobs:
   main:
@@ -35,7 +35,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        context: client
+        context: code
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ghcr.io/zikanwari/mathattack
