--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: BUILD CI
+name: BUILD CI(number)
 
 on:
   workflow_dispatch:
@@ -27,7 +27,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v3
       with:
-          images: ghcr.io/zikanwari/mathattack
+          images: ghcr.io/zikanwari/mathattack:number
     # 5. setup buildx
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
@@ -41,4 +41,4 @@ jobs:
         context: code
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ghcr.io/zikanwari/mathattack
+        tags: ghcr.io/zikanwari/mathattack:number
